[Join Optimization] Cache key computation tasserts in presence of projection

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 9.0.0-rc1
    • Affects Version/s: None
    • Component/s: None
    • Query Optimization
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The initial implementation in SERVER-129261 assumed that no single table access paths (CanonicalQuery in any join graph node) had a projection. However this is not true as our existing rewrites may produce a projection on the base node. SERVER-128364 will allow other nodes to have projections as well.

      This ticket tracks work to encode projections into the cache key.

            Assignee:
            Ben Shteinfeld
            Reporter:
            Ben Shteinfeld
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: