SERVER-130421 Encode projections into join cache key (#57423)

GitOrigin-RevId: 3d868aaf0ab25cdc818028fbb74a85afd148e95d